--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SarfLab</title>
 <link rel="stylesheet" href="style.css">
+
+<!-- Favicon / Tarayıcı ikonu -->
+<link rel="icon" href="icon-32x32.png" sizes="32x32" type="image/png">
+
+<!-- Apple iOS için ana ekran ikonu -->
+<link rel="apple-touch-icon" href="icon-180x180.png">
+
+<!-- Android / PWA için manifest -->
+<link rel="manifest" href="manifest.json">
+
 </head>
 <body>
 
