--- a/index.html
+++ b/index.html
@@ -1,41 +1,35 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SarfLab</title>
-    
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SarfLab Emsile</title>
 
-    <!-- Favicon / Tarayıcı ikonu -->
-    <link rel="icon" href="icon-32x32.png" sizes="32x32" type="image/png">
+<!-- CSS -->
+<link rel="stylesheet" href="style.css">
 
-    <!-- Apple iOS için ana ekran ikonu -->
-    <link rel="apple-touch-icon" href="icon-180x180.png">
-
-    <!-- Android / PWA için manifest -->
-    <link rel="manifest" href="manifest.json">
+<link rel="icon" href="icon-32x32.png" sizes="32x32" type="image/png">
+<link rel="apple-touch-icon" href="icon-180x180.png">
+<link rel="manifest" href="manifest.json">
 </head>
 <body>
 
 <!-- ===== Splash Screen ===== -->
 <div id="splash">
     <div class="splash-content">
-        <h1>SarfLab</h1>
+        <span id="sarf">SarfLab</span>
+        <span id="emsile">Emsile</span>
     </div>
 </div>
 
-<header>SarfLab</header>
+<header>SarfLab Emsile</header>
 
-<!-- Arama kutusu -->
 <div class="search-box">
     <input type="text" id="searchInput" placeholder="Kelime yaz (örn: كَتَبَ , قَرَأَ , فَتَحَ)">
 </div>
 
 <div id="wordBox"></div>
 
-<!-- PWA Yükleme Butonu -->
 <button id="installBtn" style="
   padding: 12px 20px;
   background:#004b6b;
@@ -48,30 +42,26 @@
   Uygulamayı İndir
 </button>
 
-<!-- Scriptler -->
 <script src="script.js"></script>
 <script>
-    // SERVICE WORKER KAYDI
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js")
-        .then(() => console.log("SW kayıt edildi"));
-    }
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js")
+    .then(() => console.log("SW kayıt edildi"));
+}
 
-    let installEvent;
-    const btn = document.getElementById("installBtn");
+let installEvent;
+const btn = document.getElementById("installBtn");
 
-    // Tarayıcı PWA'yı yükleyebileceğini anlayınca tetikler
-    window.addEventListener("beforeinstallprompt", e => {
-      e.preventDefault();
-      installEvent = e;
-      btn.style.display = "block"; // Butonu göster
-    });
+window.addEventListener("beforeinstallprompt", e => {
+  e.preventDefault();
+  installEvent = e;
+  btn.style.display = "block";
+});
 
-    // Butona basınca yükleme ekranı açılır
-    btn.addEventListener("click", () => {
-      btn.style.display = "none";
-      installEvent.prompt();
-    });
+btn.addEventListener("click", () => {
+  btn.style.display = "none";
+  installEvent.prompt();
+});
 </script>
 </body>
-</html>
+</html></html></html>
